# belt

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
belt/: __main__.py  registry.py  utils.py
belt/data/: image.py  iris.py  translation.py
belt/supervised/: classifier.py  generate.py  pipeline.py  translation.py
belt/supervised/models/: __init__.py  seq2seq.py  softmax_regressor.py
configs/: supervised_softmax.yaml  translation.yaml  translation_small.yaml
