[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "belt"
version = "1.0.0"
description = "A composable machine learning toolbet."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=2.18",
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.1",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "torch>=2.1",
  "transformers>=4.40",
  "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
directml = [
  "torch-directml>=0.2",
]
dev = [
  "pytest>=7.4",
  "ruff>=0.5",
  "isort",
  "black"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["belt*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
